--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,145 +1,158 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 body {
-  font-family: "Poppins", sans-serif;
+	font-family: "Poppins", sans-serif;
 }
 
 /* Navbar - Start*/
 
-.navbar{
-    font-size: 18px;
-    top: 0;
-    left: 0;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+.navbar {
+	font-size: 18px;
+	top: 0;
+	left: 0;
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
-.navbar-light .navbar-nav .nav-link{
-    padding: 0 20px;
-    color: black;
-    transition: 0.3s ease;
+
+.navbar-light .navbar-nav .nav-link {
+	padding: 0 20px;
+	color: black;
+	transition: 0.3s ease;
 }
+
 .navbar-light .navbar-nav .nav-link:hover,
 .navbari:hover,
 .navbar-light .navbar-nav .nav-link.active,
-.nnavbari.active{
-    color: coral;
+.nnavbari.active {
+	color: coral;
 }
 
-.navbar-light .navbar-toggler{
-    outline: none;
-    border: none;
+.navbar-light .navbar-toggler {
+	outline: none;
+	border: none;
 }
+
 /* Navbar - end*/
 
-.container-register{
-    display: block;
-    background-color: #f4f4f4;
-    max-width: 850px;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px 40px;
-    text-align: center;
-    position: relative;
-    font-family: sans-serif;
-    font-size: 15px;
+.container-register {
+	display: block;
+	background-color: #f4f4f4;
+	max-width: 850px;
+	margin-top: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 10px 40px;
+	text-align: center;
+	position: relative;
+	font-family: sans-serif;
+	font-size: 15px;
 }
 
 
-.textintro h1{
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 100%;
-    padding-top: 10px;
-    font-family: sans-serif;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    color: #555459;
+.textintro h1 {
+	font-size: 40px;
+	font-weight: 700;
+	line-height: 100%;
+	padding-top: 10px;
+	font-family: sans-serif;
+	margin-bottom: 20px;
+	margin-top: 20px;
+	color: #555459;
 }
 
-.textintro p{
-    font-style: normal;
+.textintro p {
+	font-style: normal;
 }
 
 input[type="text"],
 input[type="date"],
-input[type="number"]{
-    width: 100%;
-    display: inline-block;
-    font-weight: 100;
-    padding: 15px;
-    margin: 5px 0;
-    font-size: 1rem;
-    color: #3f3f3f;
+input[type="number"] {
+	width: 100%;
+	display: inline-block;
+	font-weight: 100;
+	padding: 15px;
+	margin: 5px 0;
+	font-size: 1rem;
+	color: #3f3f3f;
 }
 
-.product{
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  padding-left: 10px;
+/* Modal*/
+#renewModal .modal-btn {
+	padding: 10px;
+	font-size: 15px;
 }
 
-.product li{
-  text-align: left;
-   margin-bottom: 5px;
+
+.product {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	padding-left: 10px;
 }
 
-.product i.fa-regular.fa-circle-check{
-  color: rgb(0, 128, 255);
+.product li {
+	text-align: left;
+	margin-bottom: 5px;
+}
+
+.product i.fa-regular.fa-circle-check {
+	color: rgb(0, 128, 255);
 }
 
 
 /* Form - Start*/
-form{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 15px;
+form {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: 15px;
 }
 
-form select{
-    width: 770px;
-    padding: 15px;
-    padding-left: 10px;
-    background-color: #fff;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    font-size: 1.2rem;
-    box-shadow: 0 5px 10px 0 rgb(0,0,0,0.25);
-    cursor: pointer;
+form select {
+	width: 770px;
+	padding: 15px;
+	padding-left: 10px;
+	background-color: #fff;
+	border-radius: 10px;
+	border: none;
+	outline: none;
+	font-size: 1.2rem;
+	box-shadow: 0 5px 10px 0 rgb(0, 0, 0, 0.25);
+	cursor: pointer;
 }
+
 /* Form - End*/
 
-.btn{
-    display: inline-block;
-    padding: 12px 24px;
-    margin-bottom: 0;
-    font-size: 1.4rem;
-    text-align: center;
-    vertical-align: middle;
-    cursor: pointer;
-    color: #f5f5f5;
-    min-width: 26px;
-    min-height: 26px;
-    background-color: #555459;
-}
-.btn:hover{
-    background-color: #555459ad;
+.btn {
+	display: inline-block;
+	padding: 12px 24px;
+	margin-bottom: 0;
+	font-size: 1.4rem;
+	text-align: center;
+	vertical-align: middle;
+	cursor: pointer;
+	color: #f5f5f5;
+	min-width: 26px;
+	min-height: 26px;
+	background-color: #555459;
 }
 
-.error{
-    margin-top: 0px;
-    color: red;
+.btn:hover {
+	background-color: #555459ad;
+}
+
+.error {
+	margin-top: 0px;
+	color: red;
 }
 
 .invalid-feedback {
-	font-size:14px;
+	font-size: 14px;
 	font-weight: 600;
 	text-align: left;
 }
 
-label{
+label {
 	font-weight: 600;
 	font-size: 18px;
 	padding-top: 6px;
@@ -148,265 +161,268 @@ label{
 
 /* Traffic Insurance Calculate Page */
 .button-group {
-  display: flex;
-  gap: 10px;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	gap: 10px;
+	justify-content: center;
+	align-items: center;
 }
 
 .accept-btn {
-  background-color: green;
-  color: white;
+	background-color: green;
+	color: white;
 }
 
 .reject-btn {
-  background-color: red;
-  color: white;
+	background-color: red;
+	color: white;
 }
 
 .section-header {
-  background-color: #ECF0F1;
-  padding: 0;
-  margin-bottom: 20px;
+	background-color: #ECF0F1;
+	padding: 0;
+	margin-bottom: 20px;
 }
 
 .page-header {
-  padding-bottom: 9px;
-  margin: 40px 0 20px;
-  border-bottom: 1px solid #eeeeee;
+	padding-bottom: 9px;
+	margin: 40px 0 20px;
+	border-bottom: 1px solid #eeeeee;
 }
 
 .panel-heading {
-  padding: 10px 15px;
-  border-bottom: 1px solid transparent;
-  border-top-right-radius: 3px;
-  border-top-left-radius: 3px;
+	padding: 10px 15px;
+	border-bottom: 1px solid transparent;
+	border-top-right-radius: 3px;
+	border-top-left-radius: 3px;
 }
 
-.pricing-table .panel-default > .panel-heading{
-  background-color: rgb(255, 128, 64);
-  color: #FFF;
-  border-radius: 0;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border: none;
+.pricing-table .panel-default>.panel-heading {
+	background-color: rgb(255, 128, 64);
+	color: #FFF;
+	border-radius: 0;
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	border: none;
 }
 
-.pricing-table .panel-default > .panel-body{
-  background-color: coral;
-  color: #FFF;
-  border-radius: 2px;
+.pricing-table .panel-default>.panel-body {
+	background-color: coral;
+	color: #FFF;
+	border-radius: 2px;
 }
 
 .panel-title {
-  font-size: 14px;
+	font-size: 14px;
 }
 
 .panel-default {
-  border-color: #EBEBEB;
-  border: none;
-  border-radius: 0;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  box-shadow: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
+	border-color: #EBEBEB;
+	border: none;
+	border-radius: 0;
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	box-shadow: none;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
 }
 
 .panel-group .panel {
-  border-radius: 0px;
-  box-shadow: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
+	border-radius: 0px;
+	box-shadow: none;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
 }
 
-.panel-default > .panel-heading {
-  color: #666;
-  background-color: #F8FAFA;
+.panel-default>.panel-heading {
+	color: #666;
+	background-color: #F8FAFA;
 }
 
 .price {
-  font-size: 45px;
+	font-size: 45px;
 }
 
 .price-cents {
-  vertical-align: super;
-  font-size: 50%;
+	vertical-align: super;
+	font-size: 50%;
 }
 
 .price-month {
-  font-size: 35%;
-  font-style: italic;
+	font-size: 35%;
+	font-style: italic;
 }
+
 .list-group-item {
-  background-color: #FAFAFA;
-  border: 1px solid #ECEBEB;
+	background-color: #FAFAFA;
+	border: 1px solid #ECEBEB;
 }
 
 /* Footer - Start */
-footer{
-    background-color: #0f0f0fcb;
+footer {
+	background-color: #0f0f0fcb;
 }
 
-footer h5{
-    color: #d8d8d8;
-    font-weight: 700;
-    font-size: 1.2rem;
+footer h5 {
+	color: #d8d8d8;
+	font-weight: 700;
+	font-size: 1.2rem;
 }
 
-footer li{
-    padding-bottom: 4px;
+footer li {
+	padding-bottom: 4px;
 }
 
-footer li a{
-    font-size: 0.8rem;
-    color: #999;
+footer li a {
+	font-size: 0.8rem;
+	color: #999;
 }
 
-footer li a:hover{
-    color: #d8d8d8;
+footer li a:hover {
+	color: #d8d8d8;
 }
 
-footer p{
-    color: #999;
-    font-size: 0.8rem;
+footer p {
+	color: #999;
+	font-size: 0.8rem;
 }
 
-footer .copyright a{
-    color: black;
-    width: 38px;
-    height: 38px;
-    background-color: white;
-    display: inline-block;
-    text-align: center;
-    line-height: 38px;
-    border-radius: 50%;
-    transition: 0.3 ease;
-    margin: 0 5px;
+footer .copyright a {
+	color: black;
+	width: 38px;
+	height: 38px;
+	background-color: white;
+	display: inline-block;
+	text-align: center;
+	line-height: 38px;
+	border-radius: 50%;
+	transition: 0.3 ease;
+	margin: 0 5px;
 }
 
-footer .copyright a:hover{
-    color: white;
-    background-color: #fb774b;
+footer .copyright a:hover {
+	color: white;
+	background-color: #fb774b;
 }
 
 /* Cart - Start */
-#cart-container{
-    overflow-x: auto;
+#cart-container {
+	overflow-x: auto;
 }
 
-#cart-container table{
-    border-collapse: collapse;
-    width: 100%;
-    table-layout: fixed;
-    white-space: nowrap;
+#cart-container table {
+	border-collapse: collapse;
+	width: 100%;
+	table-layout: fixed;
+	white-space: nowrap;
 }
 
-#cart-container table thead{
-    font-weight: 700;
+#cart-container table thead {
+	font-weight: 700;
 }
 
-#cart-container table thead td{
-    background: #fb774b;
-    color: #fff;
-    border: none;
-    padding: 6px 0;
-    text-align: center;
+#cart-container table thead td {
+	background: #fb774b;
+	color: #fff;
+	border: none;
+	padding: 6px 0;
+	text-align: center;
 }
 
-#cart-container table td{
-    border: 1px solid #b6b6b6;
-    text-align: center;
+#cart-container table td {
+	border: 1px solid #b6b6b6;
+	text-align: center;
 }
 
-#cart-container table td:nth-child(1){
-    width: 100px;
+#cart-container table td:nth-child(1) {
+	width: 100px;
 }
 
 #cart-container table td:nth-child(2),
-#cart-container table td:nth-child(3){
-    width: 200px;
+#cart-container table td:nth-child(3) {
+	width: 200px;
 }
 
 #cart-container table td:nth-child(4),
 #cart-container table td:nth-child(5),
-#cart-container table td:nth-child(6){
-    width: 170px;
+#cart-container table td:nth-child(6) {
+	width: 170px;
 }
 
-#cart-container table tbody img{
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
+#cart-container table tbody img {
+	width: 100px;
+	height: 100px;
+	object-fit: cover;
 }
 
-#cart-container table tbody i{
-    color: #8d8c89;
+#cart-container table tbody i {
+	color: #8d8c89;
 }
-#cart-container table tbody i:hover{
-    color: red;
+
+#cart-container table tbody i:hover {
+	color: red;
 }
 
 #cart-bottom .coupon>div,
-#cart-bottom .total>div{
-    border: 1px solid #b6b6b6;
+#cart-bottom .total>div {
+	border: 1px solid #b6b6b6;
 }
 
 #cart-bottom .coupon h5,
-#cart-bottom .total h5{
-    background: #fb774b;
-    color: #fff;
-    border: none;
-    padding: 6px 12px;
-    font-weight: 700;
+#cart-bottom .total h5 {
+	background: #fb774b;
+	color: #fff;
+	border: none;
+	padding: 6px 12px;
+	font-weight: 700;
 }
 
 #cart-bottom .coupon p,
-#cart-bottom .coupon input{
-    padding: 0 12px;
+#cart-bottom .coupon input {
+	padding: 0 12px;
 }
 
 
-#cart-bottom .total div>div{
-    padding: 0 12px;
+#cart-bottom .total div>div {
+	padding: 0 12px;
 }
 
-#cart-bottom .total h6{
-    color: #2a2a2a;
+#cart-bottom .total h6 {
+	color: #2a2a2a;
 }
 
-.second-hr{
-    background: #b8b7b3;
-    width: 100%;
-    height: 1px;
+.second-hr {
+	background: #b8b7b3;
+	width: 100%;
+	height: 1px;
 }
 
-#cart-bottom .total div>button{
-    margin: 0 12px 20px 0;
-    display: flex;
-    justify-content: flex-end;
-    border-radius: 2px;
+#cart-bottom .total div>button {
+	margin: 0 12px 20px 0;
+	display: flex;
+	justify-content: flex-end;
+	border-radius: 2px;
 }
-#cart-bottom .coupon div>button{
-    border-radius: 2px;
+
+#cart-bottom .coupon div>button {
+	border-radius: 2px;
 }
 
 /* Cart - end */
 
-.main-select{
+.main-select {
 	display: flex;
 	justify-content: space-between;
 }
 
-.main-select select{
+.main-select select {
 	width: 100%;
 }
 
-.main-select .province, .main-select .district{
+.main-select .province,
+.main-select .district {
 	margin-right: 10px;
 }
 
-.main-select .neighbourhood{
+.main-select .neighbourhood {
 	width: 350px;
 }
-
