--- a/src/main/resources/templates/seeHomeInsuranceDetails.html
+++ b/src/main/resources/templates/seeHomeInsuranceDetails.html
@@ -28,7 +28,14 @@
 			background: none;
 			margin-left: 50px;
 		}
+
+		#period {
+			width: 200px;
+			padding: 8px;
+			font-weight: 400;
+		}
 	</style>
+
 </head>
 
 <body>
@@ -60,12 +67,63 @@
 			defined! </div>
 		<div class="alert alert-warning" role="alert" th:if="${showAlert}"> An insurance for this house has already been
 			deleted or expired! </div>
+		<div class="alert alert-warning" role="alert" th:if="${showAbsent}"> There is no insurance for this house!
+		</div>
+		<!--		<button type="button" class="btn btn-info text-white mb-2"-->
+		<!--			style="background-color: rgb(62, 209, 221); font-size: 17px; padding: 10px 20px;">-->
+		<!--			<a class="text-decoration-none" th:href="@{/newHomeInsuranceCalculate/{id}(id=${insuranceId})}">-->
+		<!--				<strong>Renew Home Insurance</strong>-->
+		<!--			</a>-->
+		<!--		</button>-->
+		<!-- Button to trigger the modal -->
 		<button type="button" class="btn btn-info text-white mb-2"
-			style="background-color: rgb(62, 209, 221); font-size: 17px; padding: 10px 20px;">
-			<a class="text-decoration-none" th:href="@{/newHomeInsuranceCalculate/{id}(id=${insuranceId})}">
-				<strong>Renew Home Insurance</strong>
-			</a>
+			style="background-color: rgb(62, 209, 221); font-size: 17px; padding: 10px 20px;" data-bs-toggle="modal"
+			data-bs-target="#renewModal" id="renewButton">
+			<strong>Renew Home Insurance</strong>
 		</button>
+
+		<script th:inline="javascript">
+			document.addEventListener("DOMContentLoaded", function () {
+				var showAbsent = /*[[${showAbsent}]]*/ [];
+				var renewButton = document.getElementById("renewButton");
+
+				if (showAbsent) {
+					renewButton.disabled = true; // Butonu tıklanamaz yapar
+				}
+			});
+		</script>
+
+
+		<!-- Renew Home Insurance Modal -->
+		<div class="modal fade" id="renewModal" tabindex="-1" aria-labelledby="renewModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="renewModalLabel">Renew Home Insurance</h5>
+						<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<form th:action="@{/renewHomeInsurance/{insuranceId}(insuranceId=${insuranceId})}" method="post"
+							name="periodForm" novalidate>
+							<input type="hidden" name="insuranceId" th:value="${insuranceId}" />
+							<div class="d-flex justify-content-between mt-3">
+								<label style="margin-right: 20px;" for="period">Enter New Period:</label>
+								<input type="number" id="period" name="period" class="form-control"
+									placeholder="Period*" th:value="${period}" ng-required="true" min="0" max="100">
+							</div>
+							<!--							<p class="error" ng-show="periodForm.period.$invalid && periodForm.period.$touched">Fill out your period.</p>-->
+							<div class="modal-footer">
+								<button type="submit" class="btn modal-btn" ng-disabled="periodForm.$invalid">Save
+									Changes</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
 
 		<table class="table table-hover text-center">
 			<thead>
@@ -85,7 +143,6 @@
 			</thead>
 			<tbody>
 				<tr th:each="i :${insurance}">
-					<!--					<input type="hidden" name="customer_id" th:value="${customer_id}"/>-->
 					<td th:text="${i.insuranceId}"></td>
 					<td th:text="${i.insuranceType}"></td>
 					<td th:text="${i.customerId}"></td>
@@ -96,8 +153,9 @@
 					<td th:text="${i.startDate}"></td>
 					<td th:text="${i.endDate}"></td>
 					<td th:text="${i.period}"></td>
-					<td><button id="trash" class="mx-auto"><a th:href="@{/homeInsuranceRefund/{id}(id=${i.insuranceId})}"><i
-									id="icon-trash" class="bx bx-trash"></i></a></button></td>
+					<td><button id="trash" class="mx-auto"><a
+								th:href="@{/homeInsuranceRefund/{id}(id=${i.insuranceId})}"><i id="icon-trash"
+									class="bx bx-trash"></i></a></button></td>
 				</tr>
 			</tbody>
 		</table>
