--- a/src/main/resources/templates/customerRegisterForm.html
+++ b/src/main/resources/templates/customerRegisterForm.html
@@ -5,12 +5,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Registration Form</title>
+	
+	 <!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
+	
+	<!-- AngularJS ve jQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script th:src="@{/js/custom.js}"></script>
+	
+	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
 
 	<style>
 		.error {
