--- a/src/main/resources/templates/healthInfoList.html
+++ b/src/main/resources/templates/healthInfoList.html
@@ -4,22 +4,33 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>SBM Home</title>
+	
+	<!-- Bootstrap ve jQuery kütüphaneleri -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 		crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
 		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
 		crossorigin="anonymous"></script>
+	
+	<!-- Font Awesome -->	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	
+	<!-- Phosphor Icons -->
 	<script src="https://unpkg.com/@phosphor-icons/web"></script>
+	
+	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+		
 	<!-- Boxicons CSS -->
-	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>	
+	
+	<!-- CSS.gg Icons -->
 	<link href="https://css.gg/css" rel="stylesheet" />
-
-	<title>SBM Home</title>
+	
+	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
 
 	<style>
 		#icon-trash {
@@ -102,7 +113,7 @@
 						</p>
 					</div>
 					<div class="modal-footer">
-						<a th:href="@{/healthInsuranceEdit2/{id}(id=${healthId})}" class="btn btn-secondary">Devam
+						<a th:href="@{/healthInsuranceUpdate/{id}(id=${healthId})}" class="btn btn-secondary">Devam
 							Et</a>
 						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
 					</div>
