--- a/src/main/resources/templates/healthInsuranceForm.html
+++ b/src/main/resources/templates/healthInsuranceForm.html
@@ -110,14 +110,14 @@
 				</select>
 
 				<input type="text" id="height" name="height" placeholder="Height (cm)*" ng-model="height"
-					ng-required="true">
+					ng-required="true" ng-pattern="/^\d{2,3}$/" ng-pattern-add="/^\d+$/">
 				<p class="error" ng-show="myForm.height.$invalid && myForm.height.$touched">Fill out
-					your height.</p>
+					your height correctly.</p>
 
 				<input type="text" id="weight" name="weight" placeholder="Weight (m)*" ng-model="weight"
-					ng-required="true">
+					ng-required="true" ng-pattern="/^\d{2,3}$/" ng-pattern-add="/^\d+$/">
 				<p class="error" ng-show="myForm.weight.$invalid && myForm.weight.$touched">Fill out your
-					weight.</p>
+					weight correctly.</p>
 
 				<div class="health-details">
 					<div class="details-questions">
