--- a/src/main/resources/templates/trafficInsuranceRefund.html
+++ b/src/main/resources/templates/trafficInsuranceRefund.html
@@ -73,29 +73,29 @@
 					<h5>BILLING SUMMARY</h5>
 					<div class="d-flex justify-content-between">
 						<h6>Subtotal</h6>
-						<p th:text="${#numbers.formatDecimal(((car.offer * 100) / ( (100 + car.kdv))), 0, 'COMMA', 2, 'POINT') + ' ₺'}"></p>
+						<p th:text="${#numbers.formatDecimal(((insurance.offer * 100) / ( (100 + insurance.kdv))), 0, 'COMMA', 2, 'POINT') + ' ₺'}"></p>
 					</div>
 					<div class="d-flex justify-content-between">
 						<h6>KDV</h6>
-						<p th:text="${'% ' + car.kdv}"></p>
+						<p th:text="${'% ' + insurance.kdv}"></p>
 					</div>
 					<div class="d-flex justify-content-between">
 						<h6>Total Amount</h6>
-						<p th:text="${#numbers.formatDecimal(car.offer, 0, 'COMMA', 2, 'POINT') + ' ₺'}"></p>
+						<p th:text="${#numbers.formatDecimal(insurance.offer, 0, 'COMMA', 2, 'POINT') + ' ₺'}"></p>
 					</div>
 					<div class="d-flex justify-content-between">
 						<h6>Total Usage Time (Day)</h6>
-						<p th:text="${car.daysDiff + ' day'}"></p>
+						<p th:text="${insurance.daysDiff + ' day'}"></p>
 					</div>
 					<hr class="second-hr">
 					<div class="d-flex justify-content-between">
 						<h6>Total Refund</h6>
-						<p th:text="${#numbers.formatDecimal(car.refund, 0, 'COMMA', 2, 'POINT') + ' ₺'}"></p>
+						<p th:text="${#numbers.formatDecimal(insurance.refund, 0, 'COMMA', 2, 'POINT') + ' ₺'}"></p>
 					</div>
 
 					<div class="d-flex justify-content-between">
-						<button class="ms-auto"><a th:href="@{/carList/{id}(id=${car.customerId})}">Cancel</a></button>
-						<button class="ms-2"><a th:href="@{/deleteCar/{id}(id=${car.id})}">Delete</a></button>
+						<button class="ms-auto"><a th:href="@{/seeCarInsuranceDetails/{id}(id=${insurance.carId})}">Cancel</a></button>
+						<button class="ms-2"><a th:href="@{/deleteCarInsurance/{id}(id=${insurance.insuranceId})}">Delete</a></button>
 					</div>
 				</div>
 			</div>
