login form added -1

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
 						<a class="nav-link" href="/customerList">See Customer List</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/customerRegisterForm">New Customer Register</a>
+						<a class="nav-link" href="/customerRegister">New Customer Register</a>
 					</li>
 				</ul>
 			</div>
