--- a/src/main/resources/templates/customerRegister.html
+++ b/src/main/resources/templates/customerRegister.html
@@ -60,7 +60,7 @@
 										</div>
 									</label>
 									<input type="text" ng-model="firstname" ng-required="true" class="input-4"
-										id="firstname">
+										id="firstname" name="firstname">
 								</div>
 							</div>
 							<div class="col-2">
@@ -74,7 +74,7 @@
 										</div>
 									</label>
 									<input type="text" ng-model="lastname" ng-required="true" class="input-4"
-										id="lastname">
+										id="lastname" name="lastname">
 								</div>
 							</div>
 						</div>
@@ -89,7 +89,7 @@
 											<p>Required</p>
 										</div>
 									</label>
-									<input type="number" ng-model="tc" ng-required="true" class="input-4" id="tc">
+									<input type="number" ng-model="tc" ng-required="true" class="input-4" id="tc" name="tc">
 								</div>
 							</div>
 							<div class="col-2">
@@ -101,7 +101,7 @@
 											<p>Required</p>
 										</div>
 									</label>
-									<input type="email" ng-model="email" ng-required="true" class="input-4" id="email">
+									<input type="email" ng-model="email" ng-required="true" class="input-4" id="email" name="email">
 								</div>
 							</div>
 						</div>
@@ -118,7 +118,7 @@
 										</div>
 									</label>
 									<input type="text" ng-model="username" ng-required="true" class="input-4"
-										id="username">
+										id="username" name="username">
 								</div>
 							</div>
 							<div class="col-2">
@@ -208,8 +208,7 @@
 										<option value="" th:selected="${#fields.hasErrors('district')}">Select District*
 										</option>
 									</select>
-									<p th:if="${#fields.hasErrors('district')}" th:errorclass="error"
-										th:errors="*{district}" />
+		
 								</div>
 							</div>
 						</div>
