--- a/src/main/resources/templates/customerRegister.html
+++ b/src/main/resources/templates/customerRegister.html
@@ -47,7 +47,7 @@
 					<form th:action="@{/customerRegister}" th:object="${customer}" method="post" ng-submit="register()"
 						name="myForm">
 
-						<!-- Fist -Last Name -->
+						<!-- First -Last Name -->
 						<div class="row">
 							<div class="col-2">
 								<div class="input-group">
@@ -59,8 +59,9 @@
 											<p>Required</p>
 										</div>
 									</label>
-									<input type="text" ng-model="firstname" ng-required="true" class="input-4"
-										id="firstname" name="firstname">
+									<input type="text" ng-model="firstname" ng-pattern="/^[a-zA-Z\s]*$/"
+										ng-required="true" class="input-4" id="firstname" name="firstname"
+										maxlength="50">
 								</div>
 							</div>
 							<div class="col-2">
@@ -73,8 +74,11 @@
 											<p>Required</p>
 										</div>
 									</label>
-									<input type="text" ng-model="lastname" ng-required="true" class="input-4"
-										id="lastname" name="lastname">
+									<input type="text" ng-model="lastname" ng-pattern="/^[a-zA-Z\s]*$/"
+										ng-required="true" class="input-4" id="lastname" name="lastname" maxlength="50">
+									<div ng-show="myForm.laststname.$error.pattern">
+										Only letters can be used.
+									</div>
 								</div>
 							</div>
 						</div>
@@ -89,7 +93,8 @@
 											<p>Required</p>
 										</div>
 									</label>
-									<input type="number" ng-model="tc" ng-required="true" class="input-4" id="tc" name="tc">
+									<input type="number" ng-model="tc" ng-required="true" class="input-4" id="tc"
+										name="tc" onKeyPress="if(this.value.length==11) return false;">
 								</div>
 							</div>
 							<div class="col-2">
@@ -101,7 +106,8 @@
 											<p>Required</p>
 										</div>
 									</label>
-									<input type="email" ng-model="email" ng-required="true" class="input-4" id="email" name="email">
+									<input type="email" ng-model="email" ng-required="true" class="input-4" id="email"
+										name="email">
 								</div>
 							</div>
 						</div>
@@ -118,7 +124,7 @@
 										</div>
 									</label>
 									<input type="text" ng-model="username" ng-required="true" class="input-4"
-										id="username" name="username">
+										id="username" name="username" maxlength="50">
 								</div>
 							</div>
 							<div class="col-2">
@@ -132,7 +138,7 @@
 										</div>
 									</label>
 									<input type="password" ng-model="password" ng-required="true" id="password"
-										class="input-4" name="password">
+										class="input-4" name="password" >
 									<button type="button" class="hide-pass" onclick="togglePasswordVisibility()">
 										<i class='bx bxs-hide' id="hideIcon" style="display: none;"></i>
 										<i class='bx bx-show' id="showIcon"></i>
@@ -163,9 +169,9 @@
 											ng-show="myForm.phoneNumber.$invalid && myForm.phoneNumber.$touched">
 											<i class='bx bxs-error-alt'></i>
 											<p>Required</p>
-										</div> 
+										</div>
 									</label>
-									<input type="text" ng-model="phoneNumber" ng-required="true" class="input-4"
+									<input type="number" ng-model="phoneNumber" ng-required="true" class="input-4"
 										name="phoneNumber" id="phoneNumber" onKeyPress="if(this.value.length==11) return false;">
 								</div>
 							</div>
@@ -208,7 +214,7 @@
 										<option value="" th:selected="${#fields.hasErrors('district')}">Select District*
 										</option>
 									</select>
-		
+
 								</div>
 							</div>
 						</div>
@@ -231,11 +237,13 @@
 							<button class="btn btn-submit">Submit</button>
 						</div>
 						<!-- alert -->
-						<div class="alert alert-warning" role="alert" th:if="${showTcAlert}" ng-show="${!showTcAlert}"> This TC number is already
-						registered! </div>
-						<div class="alert alert-warning" role="alert" th:if="${showEmailAlert}" ng-show="${!showTcAlert}"> This Email address is already
-						registered! </div>
-						
+						<div class="alert alert-warning" role="alert" th:if="${showTcAlert}" ng-show="${!showTcAlert}">
+							This TC number is already
+							registered! </div>
+						<div class="alert alert-warning" role="alert" th:if="${showEmailAlert}"
+							ng-show="${!showTcAlert}"> This Email address is already
+							registered! </div>
+
 						<script th:inline="javascript">
 							var districtList = /*[[${getAllDistricts}]]*/[];
 						</script>
