--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,13 +9,12 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-		crossorigin="anonymous"></script>
-		
+	<!-- Bootsrapt -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- İcon -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<script src="https://unpkg.com/@phosphor-icons/web"></script>
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -51,28 +50,42 @@
 </head>
 
 <body>
-	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light py-3 fixed-top">
-		<div class="container">
-			<a class="navbar-brand text-black" href="/index">SBM</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-				aria-label="Toggle navigation">
-				<span id="bar" data-lucide="menu"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
-						<a class="nav-link" href="/customerList">See Customer List</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/customerRegister">New Customer Register</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<!--End Navbar-->
+	<!--Navbar-->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid px-5">
+          <a class="navbar-brand" href="#">Logo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav mb-2 mb-lg-0 text-center">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">
+                    <i class='bx bxs-home'></i>
+                    Home
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/customerList">See Customer List</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/customerRegister">New Customer Register</a>
+              </li>
+            </ul>
+          </div>
+          <div class="operations">
+            <a href="/login">
+                <i class='bx bxs-user-circle login-icon'></i>
+                Login
+            </a>
+            <a href="/customerRegister">
+                <i class='bx bxs-user-plus register-icon'></i>
+                Register
+            </a>
+          </div>
+        </div>
+      </nav>
+	<!--	End Navbar-->
 
 	<section id="featured" class="my-5 py-5">
 		<div class="container mt-5 py-5">
